--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gl = "0.14.0"
+image = "0.24.7"
+nalgebra = "0.32.3"
+palette = "0.7.3"
+tobj = "4.0.0"
