--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "my_gl"
 version = "0.0.1"
 edition = "2021"
+authors = ["Di Saber"]
+repository = "https://github.com/DiSaber/my_gl"
+license = "MIT"
+license-file = "LICENSE"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
